<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skip_bg_2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lay_bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/skip_bg_2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            android:contentDescription="@string/app_name"
            android:src="@drawable/slider_2_theme2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_bottom"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/skip_bg_1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/slide_2_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <View
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/line_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/slide_2_desc"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>