<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#85000000">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="false"
        card_view:elevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/congratulation_title"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="50dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/line_white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/congratulation_msg"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/pay_white_button"
                    android:text="@string/congratulation_ok"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>